css/style.css
html {
    height: 100%;
    width: 100%;
}

.container 
{
    height: 100%;
    width: 100%;
    position:relative;
}

.logincover
{

    width: 100%;
    height: 100%;
    z-index: 2;
    background-color:black;
    opacity:0.6;
    position:absolute;
    bottom:0;
}

.uppermenu
{
    background-color:silver;
    height:30px;
    width:100%;
    position:absolute;
    border-width:1px;	
    border-bottom-style:solid;
    z-index:3;
}

.chart
{
	float:right;
    background-color: #F3F3F3;
    margin-top:35px;
}
.menu
{
    position:absolute;
    top: 30px;
	background-color: #F3F3F3;
	float:left;
	width: 340px;
    display: inline;
    bottom:0;
    overflow-y: scroll;
}

.dropper,
.buttoncon
{
    margin-left:10px;
    position:relative;
}


.dropper
{
    margin-bottom:20px;
    border:0px solid;
    border-bottom-left-radius: 15px 15px;
    border-bottom-right-radius: 15px 15px;
    height:0%;
    width:298px;
    background-color:#D1D1D1;
    font-family:arial;color:black;font-size:15px;
    text-align:center
}


.buttoncon
{
    height: 60px; 
    width:300px;
    box-shadow: 10px 12px 5px #888888;
    border-bottom-left-radius: 15px 15px;
    border-bottom-right-radius: 15px 15px;
    border-top-right-radius: 15px 15px;
    border-bottom-right-radius: 15px 15px;
    margin-top:15px;
}

    .buttonimg
    {
        height: 60px;
        width: 60px;
        background-color:red;
        border:1px solid;
        border-top-left-radius: 15px 15px;
        border-bottom-left-radius: 15px 15px;
        position:relative;
		background-repeat:no-repeat;
		background-size: 60px 60px;
		background-position:center;
    }
    
    #i1
    {
		background-image:url(/img/bldsgr.png);
    }
    
    #i2
    {
		background-image:url(/img/meal.png);
    }
    
    #i4
    {
		background-image:url(/img/exc.png);
    }
    #i8
    {
		background-image:url(/img/gear.png);
    }
    #i5
    {
		background-image:url(/img/injection.png);
    }
    #i3
    {
		background-image:url(/img/insulin.png);
    }
    #i6
    {
		background-image:url(/img/graph.png);
    }
    #i7
    {
		background-image:url(/img/calc.png);
    }
    

    


    .buttontextcon
    {
        height: 60px;
        width: 240px;
        float:right;
        background-color: Silver;
        border:1px solid;
        border-top-right-radius: 15px 15px;
        border-bottom-right-radius: 15px 15px;
    }
    
        .buttontext
        {
            margin:auto;
            text-align:center;
            vertical-align: middle;
            font-family:arial;color:black;font-size:20px;
            line-height:325%;
        }
	

body 
{
  height: 100%;
  width: 100%;
  padding:0px;
  margin:0px;
  font-family:arial;color:black;font-size:15px;
  background-color: #F3F3F3;

}

.axis path,
.axis line 
{
  fill: none;
  stroke: #000;
  shape-rendering: crispEdges;
}

.x.axis path 
{
  display: none;
}

.line 
{
  fill: none;
  stroke: steelblue;
  stroke-width: 1.5px;
}

#logbtn,
#logbtn2
{
    border:1px solid;
    width:60px;
    height: 25px;
    margin-top:2px;
    float:right;
    background-color:lightgrey;
    margin-right:10px;
    border-bottom-left-radius: 5px 5px;
    border-bottom-right-radius: 5px 5px;
    border-top-right-radius: 5px 5px;
    border-top-left-radius: 5px 5px;
    
}

    #lgntext,
    #lgntext2
    {
        margin-top:5px;
        margin-bottom:5px;
        font-family:arial;color:black;font-size:15px;
        text-align:center;
        text-align:middle;
    }
    
.inputbox
{
    -moz-border-radius-topright: 30px;
    -webkit-border-top-right-radius: 30px;
    border-top-right-radius: 30px;
    -moz-border-radius-bottomleft: 30px;
    -webkit-border-bottom-left-radius: 30px;
    border-bottom-left-radius: 30px;
    float:right;
    border: 1px solid #848484;
    outline:0; 
    height:23px; 
    width: 100px; 
    padding-right:15px; 
    padding-left:15px; 
    margin-top:1px;
    margin-right: 20px;
  } 
  
.logtext
{
    margin-top:7.5px;
    margin-bottom:7.5px;
    font-family:arial;color:black;font-size:15px;
    float: right;
    margin-right; 10px;
}

#regtext
{
    margin-top:5px;
	margin-bottom:5px;
	font-family:arial;color:black;font-size:15px;
	text-align:center;
	text-align:middle;
}

#regbtn,
#regbtn2
{
    border:1px solid;
    width:60px;
    height: 25px;
    margin-top:2px;
    float:right;
    background-color:lightgrey;
    margin-right:10px;
    border-bottom-left-radius: 5px 5px;
    border-bottom-right-radius: 5px 5px;
    border-top-right-radius: 5px 5px;
    border-top-left-radius: 5px 5px;
    
}

#dropbutton
{
	border:1px solid;
    width:60px;
    height: 25px;
    margin-top:5px;
    background-color:lightgrey;
    margin-left:auto;
    margin-right:auto;
    border-bottom-left-radius: 5px 5px;
    border-bottom-right-radius: 5px 5px;
    border-top-right-radius: 5px 5px;
    border-top-left-radius: 5px 5px;
}

.registerdrop
{
	margin: auto;
	 top: 0; left: 0; bottom: 0; right: 0;
	float:right;
	position:absolute;
	width:500px;
	height:450px;
	background-color:#B8B8B1;
	z-index: 5;
	margin-top:50px;
	border-bottom-left-radius: 15px 15px;
    border-bottom-right-radius: 15px 15px;
    border-top-right-radius: 15px 15px;
    border-top-left-radius: 15px 15px;
    border:2px solid #a1a1a1;
    visibility:hidden;
    font-family:arial;color:black;font-size:15px;
}

.icons
{
	height:100%;
	width:100%;
}

.arc path {
  stroke: #fff;
}

::-webkit-scrollbar {
    width: 12px;
}
 
/* Track */
::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
    -webkit-border-radius: 10px;
    border-radius: 10px;
}
 
/* Handle */
::-webkit-scrollbar-thumb {
    -webkit-border-radius: 10px;
    border-radius: 10px;
    background:#3F3F3D; 
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
}
::-webkit-scrollbar-thumb:window-inactive {
	background:#3F3F3D; 
}

